@@ -479,6 +479,30 @@ block|{
 name|PrintWriter
 name|pw
 init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|FileUtil
+operator|.
+name|setWritable
+argument_list|(
+name|nodeHealthscriptFile
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|FileUtil
+operator|.
+name|setReadable
+argument_list|(
+name|nodeHealthscriptFile
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|pw
+operator|=
 operator|new
 name|PrintWriter
 argument_list|(
@@ -488,7 +512,7 @@ argument_list|(
 name|nodeHealthscriptFile
 argument_list|)
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 name|pw
 operator|.
 name|println
@@ -501,11 +525,15 @@ operator|.
 name|flush
 argument_list|()
 expr_stmt|;
+block|}
+finally|finally
+block|{
 name|pw
 operator|.
 name|close
 argument_list|()
 expr_stmt|;
+block|}
 name|FileUtil
 operator|.
 name|setExecutable
