@@ -1304,19 +1304,6 @@ operator|.
 name|COMPLETE
 argument_list|)
 expr_stmt|;
-name|rm1
-operator|.
-name|waitForState
-argument_list|(
-name|nm1
-argument_list|,
-name|containerId3
-argument_list|,
-name|RMContainerState
-operator|.
-name|COMPLETED
-argument_list|)
-expr_stmt|;
 comment|// Even though the completed container containerId3 event was sent to the
 comment|// earlier failed attempt, new RMAppAttempt can also capture this container
 comment|// info.
@@ -1335,19 +1322,11 @@ argument_list|()
 argument_list|)
 decl_stmt|;
 comment|// 4 containers finished, acquired/allocated/reserved/completed.
-name|Assert
-operator|.
-name|assertEquals
+name|waitForContainersToFinish
 argument_list|(
 literal|4
 argument_list|,
 name|newAttempt
-operator|.
-name|getJustFinishedContainers
-argument_list|()
-operator|.
-name|size
-argument_list|()
 argument_list|)
 expr_stmt|;
 name|boolean
@@ -1535,19 +1514,25 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 comment|// all 4 normal containers finished.
-name|Assert
+name|System
 operator|.
-name|assertEquals
+name|out
+operator|.
+name|println
 argument_list|(
-literal|5
-argument_list|,
+literal|"New attempt's just finished containers: "
+operator|+
 name|newAttempt
 operator|.
 name|getJustFinishedContainers
 argument_list|()
-operator|.
-name|size
-argument_list|()
+argument_list|)
+expr_stmt|;
+name|waitForContainersToFinish
+argument_list|(
+literal|5
+argument_list|,
+name|newAttempt
 argument_list|)
 expr_stmt|;
 name|rm1
@@ -1555,6 +1540,54 @@ operator|.
 name|stop
 argument_list|()
 expr_stmt|;
+block|}
+DECL|method|waitForContainersToFinish (int expectedNum, RMAppAttempt attempt)
+specifier|private
+name|void
+name|waitForContainersToFinish
+parameter_list|(
+name|int
+name|expectedNum
+parameter_list|,
+name|RMAppAttempt
+name|attempt
+parameter_list|)
+throws|throws
+name|InterruptedException
+block|{
+name|int
+name|count
+init|=
+literal|0
+decl_stmt|;
+while|while
+condition|(
+name|attempt
+operator|.
+name|getJustFinishedContainers
+argument_list|()
+operator|.
+name|size
+argument_list|()
+operator|!=
+name|expectedNum
+operator|&&
+name|count
+operator|<
+literal|500
+condition|)
+block|{
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|100
+argument_list|)
+expr_stmt|;
+name|count
+operator|++
+expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Test
